--- a/package.json
+++ b/package.json
@@ -3,11 +3,19 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+
+  "homepage" : "https://github.com/Gururaj254/TaskMatrix",
+  
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    
+    "predeploy": "npm run build", 
+    "deploy": "gh-pages -d build"
+    
+
   },
   "dependencies": {
     "react": "^19.1.1",
