--- a/package.json
+++ b/package.json
@@ -3,20 +3,18 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://Gururaj254.github.io/TaskMatrix",
 
-  "homepage" : "https://github.com/Gururaj254/TaskMatrix",
-  
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    
-    "predeploy": "npm run build", 
-    "deploy": "gh-pages -d build"
-    
-
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
+
+
   "dependencies": {
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
@@ -29,6 +27,7 @@
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
+    "gh-pages": "^6.3.0",
     "globals": "^16.4.0",
     "vite": "^7.1.7"
   }
